--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -44,10 +44,7 @@
       opacity: 0.4;
     }
     100% {
-      transform: translate(
-        calc(var(--x) + var(--drift)),
-        -20vh
-      );
+      transform: translate(calc(var(--x) + var(--drift)), -20vh);
       opacity: 0;
     }
   }
@@ -126,18 +123,19 @@
     color: var(--color-text);
     background: var(--color-background);
     line-height: 1.6;
-    font-family: Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+    font-family:
+      Inter,
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      'Fira Sans',
+      'Droid Sans',
+      'Helvetica Neue',
+      sans-serif;
     font-size: 15px;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
